# cyfs-gateway

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
src/: Cargo.toml  bucky_project.json  bucky_project.yaml  cargo.toml  install_cyfs_gateway.sh  main.rs  make_sn_config.py  run.py
src/apps/cyfs_gateway/: Cargo.toml
src/apps/cyfs_gateway/src/: acme_sn_provider.rs  config_loader.rs  config_merger.rs  cyfs_cmd_client.rs  cyfs_cmd_server.rs  cyfs_cmd_server.yaml  debug.rs  gateway.rs  gateway_control_client.rs  gateway_control_server.rs  gateway_control_server.yaml  js_pkg_manager.rs  lib.rs  main.rs  process_chain_doc.rs  socks.rs
src/apps/cyfs_gateway/tests/: local_dns.toml  test_cmd_server.rs  test_control_server.rs  test_cyfs_gateway.rs  test_cyfs_gateway.yaml
src/apps/cyfs_gateway/web/: README.md  dashboard.api.draft.ts  index.html  package.json  pnpm-lock.yaml
src/apps/cyfs_gateway/web/src/: App.tsx  index.css
src/apps/test_server/: Cargo.toml
src/apps/test_server/src/: main.rs  simple_server.rs
src/components/cyfs-acme/: Cargo.toml
src/components/cyfs-acme/src/: acme_cert_provider.rs  acme_client.rs  cert_mgr.rs  default_challenge_responder.rs  js_extend_cert_provider.rs  lib.rs
src/components/cyfs-dns/: Cargo.toml
src/components/cyfs-dns/src/: cmd_resolve.rs  dns_server.rs  lib.rs  local_dns.rs  resolve.rs
src/components/cyfs-gateway-api/: Cargo.toml
src/components/cyfs-gateway-api/src/: lib.rs  sn_client.rs
src/components/cyfs-gateway-lib/: Cargo.toml  acme_account.json
src/components/cyfs-gateway-lib/examples/: cyfs_tcp_server.rs  cyfs_tcp_server.yaml  dir_server_example.rs
src/components/cyfs-gateway-lib/src/: aes_stream.rs  cert_mgr.rs  config.rs  connection_manager.rs  device_manager.rs  gateway_control_client.rs  global_collection_manager.rs  global_process_chains.rs  js_externals.rs  json_collection.rs  lib.rs  quic_tunnel.rs  selector.rs  self_cert_mgr.rs  timer_manager.rs  tls_tunnel.rs  tunnel.rs  tunnel_client_cert_manager.rs  tunnel_connector.rs  tunnel_mgr.rs  tunnel_url_status.rs
src/components/cyfs-gateway-lib/src/cmds/: error.rs  forward.rs  in_time_range.rs  mod.rs  num_cmp.rs  parse_cookie.rs  proxy_protocol_probe.rs  redirect.rs  server.rs  set_limit.rs  set_stat.rs  verify_jwt.rs
src/components/cyfs-gateway-lib/src/collections/: ip_region_map.rs  json_map.rs  json_set.rs  mod.rs  sqlite_map.rs  sqlite_set.rs  text_set.rs
src/components/cyfs-gateway-lib/src/forward/: failure_state.rs  least_time.rs  mod.rs  plan.rs  selector.rs
src/components/cyfs-gateway-lib/src/inner_service/: mod.rs
src/components/cyfs-gateway-lib/src/io_dump/: io_dump_frame.rs  io_dump_size.rs  io_dump_writer.rs  mod.rs
src/components/cyfs-gateway-lib/src/ip/: mod.rs  proxy_tunnel.rs  tcp.rs  tunnel.rs  udp.rs
src/components/cyfs-gateway-lib/src/rtcp/: datagram.rs  mod.rs  package.rs  protocol.rs  rtcp.rs  stack.rs  stream_helper.rs  test.rs  tunnel.rs
src/components/cyfs-gateway-lib/src/server/: acme_http_challenge_server.rs  cmd_qa.rs  cyfs_server.rs  cyfs_server_manager.rs  dir_server.rs  dns_server.rs  http_compression.rs  http_server.rs  mod.rs  ndn_server.rs  qa_server.rs  server.rs  socks5_server.rs  welcome_server.rs
src/components/cyfs-gateway-lib/src/socks/: mod.rs  tunnel.rs
src/components/cyfs-gateway-lib/src/stack/: limiter.rs  mod.rs  proxy_protocol.rs  quic_stack.rs  rtcp_stack.rs  stack.rs  stack_context_factory.rs  tcp_stack.rs  tls_cert_resolver.rs  tls_stack.rs  udp_stack.rs
src/components/cyfs-lookup/: Cargo.toml
src/components/cyfs-lookup/src/: hostname.rs  lib.rs  probe.rs
src/components/cyfs-lookup/src/mac/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/cyfs-p2p/: Cargo.toml
src/components/cyfs-p2p/src/: identity.rs  lib.rs  pn_server.rs  sn_server.rs  stack.rs  stream.rs  tunnel.rs
src/components/cyfs-process-chain/: Cargo.toml  README.md
src/components/cyfs-process-chain-lint/: Cargo.toml  README.md
src/components/cyfs-process-chain-lint/src/: lib.rs  main.rs
src/components/cyfs-process-chain-lint/src/test/: mod.rs  test_rules.rs
src/components/cyfs-process-chain/benches/: process_chain_runtime.rs
src/components/cyfs-process-chain/benches/common/: mod.rs
src/components/cyfs-process-chain/benches/reports/: INDEX.md  README.md  generate_report.py  manifest.json
src/components/cyfs-process-chain/doc/: ARCHITECTURE.md  COLLECTION_BACKEND_ASSESSMENT.md  COMMAND_REFERENCE.md  COMMAND_REFERENCE.zh-CN.md  LINT.md  MIGRATION_TYPED_LITERAL_BREAKING.md  PERFORMANCE_TEST_PLAN.md  README.md  RFC_COLLECTION_SEMANTICS.md  RFC_FOR_LOOP_STATEMENT.md  RFC_LIGHTWEIGHT_TYPE_SYSTEM.md  RFC_MATCH_RESULT_STATEMENT.md  RFC_SCRIPT_MODULARIZATION.md  RFC_TEMPLATE_LIBRARY.md  SYNTAX_STRICT_SPEC.md
src/components/cyfs-process-chain/doc/templates/: README.md  auth_rewrite_fallback.process_chain.xml  canary_by_header.process_chain.xml  (+3 more)
src/components/cyfs-process-chain/examples/: shlex_demo.rs
src/components/cyfs-process-chain/src/: lib.rs  main.rs
src/components/cyfs-sn/: Cargo.toml  readme.md
src/components/cyfs-sn/src/: lib.rs  sn_db.rs  sn_server.rs  sqlite_db.rs
src/components/cyfs-socks/: Cargo.toml
src/components/cyfs-socks/src/: error.rs  lib.rs
src/components/cyfs-tun/: Cargo.toml
src/components/cyfs-tun/src/: lib.rs  tun_stack.rs
src/components/cyfs-warp/: Cargo.toml
src/components/cyfs-warp/src/: http_server.rs  lib.rs  ndn_router.rs  router.rs
src/components/server-runner/: Cargo.toml  server_runner.md
src/components/server-runner/src/: lib.rs
src/dev_configs/sn_test/apps/: buckyos.json  web3-gateway.json
src/rootfs/etc/: boot_gateway.json  boot_gateway.yaml  cyfs_gateway.json  cyfs_gateway.yaml  device.doc.json  device_key.pem  web3_gateway.yaml
src/scripts/: build.py  build_rust.py  build_web_apps.py  install.py  make_config.py  prepare_rootfs.py
src/test/: sn_checklist.sh
src/web3-gateway/: .env  download_and_upgrade_latest_release.sh  local_dns.toml  params.json  push.py  readme.md  release_sync.md  start.py  stop.py  web3_gateway.yaml
(+280 files in other folders)
