[project]
name = "cyfs-gateway-workspace"
version = "0.1.0"
description = "Workspace runtime dependencies for cyfs-gateway development scripts."
requires-python = ">=3.11"
dependencies = [
    "buckyos-devkit",
]

[tool.uv.sources]
buckyos-devkit = { git = "https://github.com/buckyos/buckyos-devkit.git" }
