[workspace]
resolver = "3"
members = [
    "components/cyfs-process-chain",
    "components/cyfs-dns",
    "components/cyfs-warp",
    "components/cyfs-socks",
    "components/cyfs-gateway-lib",
    "components/cyfs-sn",
    "apps/cyfs_gateway",
    "components/cyfs-tun",
    "components/cyfs-acme",
]
