[workspace]
resolver = "3"
members = [
    "components/cyfs-process-chain",
    "components/cyfs-dns",
    "components/cyfs-socks",
    "components/cyfs-gateway-lib",
    "components/cyfs-sn",
    "components/cyfs-tun",
    "components/cyfs-acme",
    "components/server-runner",
    "apps/cyfs_gateway",
    "apps/test_server",
]
