[workspace]
resolver = "3"
members = [
    "components/cyfs-process-chain",
    "components/cyfs-dns",
    "components/cyfs-socks",
    "components/cyfs-gateway-lib",
    "components/cyfs-sn",
    "components/cyfs-tun",
    "components/cyfs-acme",
    "components/server-runner",
    "apps/cyfs_gateway",
    "apps/test_server",
]

[workspace.dependencies]
# 基础异步运行时
tokio = { version = "*", features = ["full"] }
# 日志
log = "*"
env_logger = "*"
# 序列化
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml_ng = "0.10.0"
serde_qs = "0.15"
serde_urlencoded = "0.7.1"
# 异步 trait
async-trait = "*"
# 错误处理
anyhow = "*"
thiserror = "*"
# URL 处理
url = "*"
# 工具库
lazy_static = "*"
once_cell = "*"
rand = "0.9.0"
hex = "*"
base64 = "*"
# HTTP 相关
http = "1"
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json","rustls-tls-native-roots"] }
# 未来和流
futures = "*"
futures-util = "*"
# 命令行
clap = "*"
# 时间
chrono = "0.4.39"
# 加密
sha2 = "*"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = "0.26.1"
rustls-pemfile = "2.0"
rustls-platform-verifier = "0.6.1"
ring = "0.17"
openssl = "0.10"
# 证书生成
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
# 其他工具
toml = "*"
regex = "*"
shlex = "1.3.0"
bytes = "*"
tempfile = "3.22.0"
# BuckyOS 基础库
buckyos-kit = { git = "https://github.com/buckyos/buckyos-base.git", branch = "beta1", package = "buckyos-kit" }
kRPC = { git = "https://github.com/buckyos/buckyos-base.git", branch = "beta1", package = "kRPC" }
name-client = { git = "https://github.com/buckyos/buckyos-base.git", branch = "beta1", package = "name-client" }
name-lib = { git = "https://github.com/buckyos/buckyos-base.git", branch = "beta1", package = "name-lib" }
