[package]
name = "cyfs_gateway"
version = "0.5.1"
edition = "2021"
authors = ["BuckyOS DAO","@waterflier","@lurenpluto","@wugren"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
log.workspace = true
url.workspace = true
tokio = { version = "*", features = ["full","tracing"] }
console-subscriber = { version = "*" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
clap.workspace = true
env_logger.workspace = true
bytes.workspace = true
dirs = "*"
once_cell.workspace = true
anyhow.workspace = true
json_value_merge = "2"
serde_yaml_ng.workspace = true
sfo-result = "0.2.16"
sha2.workspace = true
chrono.workspace = true
async-recursion = "*"
toml.workspace = true
hex.workspace = true
jsonwebtoken.workspace = true
sfo-io = "0.1.12"
sfo-log = { version = "0.1"}

buckyos-kit.workspace = true
name-client.workspace = true
name-lib.workspace = true
kRPC.workspace = true

cyfs-gateway-lib = { path = "../../components/cyfs-gateway-lib" }
cyfs-sn = { path = "../../components/cyfs-sn" }
cyfs-dns = { path = "../../components/cyfs-dns" }
cyfs-socks = { path = "../../components/cyfs-socks" }
cyfs-tun = { path = "../../components/cyfs-tun"}
http-body-util.workspace = true
http.workspace = true
shlex.workspace = true
sfo-js = { version = "0.1", path = "../../../../sfo-js" }
rand = "0.9.2"

[dev-dependencies]
tempfile.workspace = true
hyper = { version = "1.8", features = ["full"] }
hyper-util.workspace = true
http-body-util.workspace = true
hickory-resolver = { version = "0.24", features = ["tokio"] }
