[package]
name = "test_server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bytes = "1"
env_logger = "0.11"
http = "1"
http-body-util = "0.1"
log = "0.4"
tokio = { version = "1.41", features = ["macros", "rt", "rt-multi-thread"] }
server-runner = { path = "../../components/server-runner" }
cyfs-gateway-lib = { path = "../../components/cyfs-gateway-lib" }
buckyos-kit = { git = "https://github.com/buckyos/buckyos-base.git", branch = "beta1", package = "buckyos-kit" }

