[package]
name = "test_server"
version.workspace = true
edition = "2024"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
log.workspace = true
tokio.workspace = true
server-runner = { path = "../../components/server-runner" }
cyfs-gateway-lib = { path = "../../components/cyfs-gateway-lib" }
buckyos-kit.workspace = true
kRPC.workspace = true
serde_json.workspace = true
