[package]
name = "cyfs-acme"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
openssl = "0.10"
serde = { version = "1.0.217", features = ["derive"] }
rcgen = "0.14"
base64 = "0.22"
anyhow = "*"
sha2 = "*"
log = "0.4"
serde_json = "1"
async-trait = "0.1"
hex = "0.4"
buckyos-kit = { git = "https://github.com/buckyos/buckyos-base.git", branch = "beta1", package = "buckyos-kit" }
rand = "*"
chrono = "0.4"
rustls-pemfile = "2.0"
sfo-js = "0.1"
