[package]
name = "cyfs-acme"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
rustls.workspace = true
openssl.workspace = true
serde.workspace = true
rcgen.workspace = true
base64.workspace = true
anyhow.workspace = true
sha2.workspace = true
log.workspace = true
serde_json.workspace = true
async-trait.workspace = true
hex.workspace = true
buckyos-kit.workspace = true
rand.workspace = true
chrono.workspace = true
rustls-pemfile.workspace = true
lazy_static.workspace = true
sfo-js = "*"
callback-trait = "0.1"