[package]
name = "cyfs-dns"
version = "0.4.0"
edition = "2021"
authors = ["BuckyOS DAO","@waterflier","@wugren"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
async-trait = "*"
anyhow = "*"
log = "*"
env_logger = "*"
tokio = { version = "*", features = ["full"] }
serde = "*"
serde_json = "*"
hickory-server = "0.25.2"
hickory-proto = "0.25.2"
#chrono = "*"
url = "*"
futures = "*"
cyfs-gateway-lib = { path = "../cyfs-gateway-lib" }
buckyos-kit = { git = "https://github.com/buckyos/buckyos-base.git", branch = "beta1", package = "buckyos-kit" }
name-client = { git = "https://github.com/buckyos/buckyos-base.git", branch = "beta1", package = "name-client" }
name-lib = { git = "https://github.com/buckyos/buckyos-base.git", branch = "beta1", package = "name-lib" }
cyfs-sn = {path = "../cyfs-sn"}
cyfs-process-chain = { path = "../cyfs-process-chain" }
shlex = "1.3.0"
clap = "4.5"

[dev-dependencies]
serde_yaml_ng = "0.10.0"
tempfile = "3.23.0"
