[package]
name = "cyfs-dns"
version = "0.4.0"
edition = "2021"
authors = ["BuckyOS DAO","@waterflier","@wugren"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
async-trait.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
hickory-server = "0.25.2"
hickory-proto = "0.25.2"
#chrono = "*"
url.workspace = true
futures.workspace = true
cyfs-gateway-lib = { path = "../cyfs-gateway-lib" }
buckyos-kit.workspace = true
name-client.workspace = true
name-lib.workspace = true
cyfs-sn = {path = "../cyfs-sn"}
cyfs-process-chain = { path = "../cyfs-process-chain" }
shlex.workspace = true
clap.workspace = true

[dev-dependencies]
serde_yaml_ng.workspace = true
tempfile.workspace = true
