[package]
name = "cyfs-gateway-api"
version.workspace = true
edition = "2024"
authors = ["BuckyOS DAO", "@waterflier"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
hex.workspace = true
kRPC.workspace = true
log.workspace = true
name-lib.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sfo-result = "0.2"
sha2.workspace = true
