[package]
name = "cyfs-gateway-lib"
version = "0.4.0"
edition = "2021"
authors = ["BuckyOS DAO","@waterflier"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
hex = "*"
anyhow = "*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"
log = "*"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "*"
toml = "*"
thiserror = "*"
reqwest = {version = "*", features = ["json", "rustls-tls"]}
jsonwebtoken = "*"
x25519-dalek = { version = "*", features = ["static_secrets","getrandom"] }
ed25519-dalek = { version = "*", features = ["rand_core"] }
ed25519_to_curve25519 = "*"
sha2 = "*"
url = "*"
lazy_static = "*"
once_cell = "*"
fern = "*"
chrono = "0.4.39"
aes = "0.8.4"
ctr = "0.9.2"
cipher = "0.4.4"
futures = "*"
base64 = "*"
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"]}
http-body-util ="0.1"
openssl = "0.10"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = "0.26.1"
rustls-pemfile = "1.0"
ring = "0.17"
tokio-socks = "*"
libsocks_client = "*"
sfo-result = "0.2"
sfo-split = { version = "0.1.6", features = ["io"] }
#sfo-io = "0.1.7"
sfo-io = { path = "../../../../sfo-io" }
serde_yaml_ng = "0.10.0"
shlex = "1.3.0"
quinn = { version = "0.11.9", default-features = false, features = ["platform-verifier", "rustls", "ring", "runtime-tokio"] }
h3 = { version = "0.0.8" }
h3-quinn = { version = "0.0.10" }
http = "1"
serde_qs = "0.15"
serde_urlencoded = "0.7.1"
tokio-util = { version = "0.7", features = ["full"] }

buckyos-kit = { git = "https://github.com/buckyos/buckyos-base.git", package = "buckyos-kit" }
name-client = { git = "https://github.com/buckyos/buckyos-base.git", package = "name-client" }
name-lib = { git = "https://github.com/buckyos/buckyos-base.git", package = "name-lib" }
ndn-lib = { git = "https://github.com/buckyos/cyfs-ndn.git", package = "ndn-lib" }
cyfs-socks = { path = "../cyfs-socks" }
cyfs-process-chain = { path = "../cyfs-process-chain" }
pin-project = "1.1.10"
#buckyos-api = { path = "../../kernel/buckyos-api" }

[dev-dependencies]
rcgen = "0.14.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
