[package]
name = "cyfs-gateway-lib"
version = "0.4.0"
edition = "2024"
authors = ["BuckyOS DAO","@waterflier"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
hex = "*"
anyhow = "*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"
log = "*"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "*"
toml = "*"
thiserror = "*"
x25519-dalek = { version = "*", features = ["static_secrets","getrandom"] }
ed25519-dalek = { version = "*", features = ["rand_core"] }
ed25519_to_curve25519 = "*"
sha2 = "*"
url = "*"
lazy_static = "*"
once_cell = "*"
fern = "*"
chrono = "0.4.39"
aes = "0.8.4"
ctr = "0.9.2"
cipher = "0.4.4"
futures = "*"
futures-util = "*"
base64 = "*"
mime_guess = "*"
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"]}
http-body-util ="0.1"
tower-service = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = "0.26.1"
rustls-pemfile = "2.0"
ring = "0.17"
tokio-socks = "*"
libsocks_client = "*"
sfo-result = "0.2"
sfo-split = { version = "0.1.6", features = ["io"] }
sfo-io = "0.1.13"
serde_yaml_ng = "0.10.0"
shlex = "1.3.0"
quinn = { version = "0.11.9", default-features = false, features = ["platform-verifier", "rustls", "ring", "runtime-tokio"] }
h3 = { version = "0.0.8" }
h3-quinn = { version = "0.0.10" }
http = "1"
serde_qs = "0.15"
serde_urlencoded = "0.7.1"
tokio-util = { version = "0.7", features = ["full"] }
rustls-platform-verifier = "0.6.1"
as-any = "0.3.2"
libc = "0.2"
socket2 = "0.6.0"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
local-ip-address = "0.6"
rcgen = "0.14"
clap = "*"
percent-encoding = "*"
regex = "*"

buckyos-kit = { git = "https://github.com/buckyos/buckyos-base.git", branch = "beta1", package = "buckyos-kit" }
kRPC = { git = "https://github.com/buckyos/buckyos-base.git", branch = "beta1", package = "kRPC" }
name-client = { git = "https://github.com/buckyos/buckyos-base.git", branch = "beta1", package = "name-client" }
name-lib = { git = "https://github.com/buckyos/buckyos-base.git", branch = "beta1", package = "name-lib" }
ndn-lib = { git = "https://github.com/buckyos/cyfs-ndn.git", package = "ndn-lib", branch = "beta1"}
cyfs-process-chain = { path = "../cyfs-process-chain" }
cyfs-acme = { path = "../cyfs-acme" }
pin-project = "1.1.10"
#buckyos-api = { path = "../../kernel/buckyos-api" }

[dev-dependencies]
rcgen = "0.14.3"
tempfile = "3.22.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
