[package]
name = "cyfs-gateway-lib"
version = "0.5.1"
edition = "2024"
authors = ["BuckyOS DAO","@waterflier"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand.workspace = true
hex.workspace = true
anyhow.workspace = true
tokio.workspace = true
async-trait.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
x25519-dalek = { version = "*", features = ["static_secrets","getrandom"] }
ed25519-dalek = { version = "*", features = ["rand_core"] }
ed25519_to_curve25519 = "*"
sha2.workspace = true
url.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
fern = "*"
chrono.workspace = true
aes = "0.8.4"
ctr = "0.9.2"
cipher = "0.4.4"
futures.workspace = true
futures-util.workspace = true
base64.workspace = true
mime_guess = "*"
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
tower-service = "0.3"
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
ring.workspace = true
tokio-socks = "*"
libsocks_client = "*"
sfo-result = "0.2"
sfo-split = { version = "0.1.6", features = ["io"] }
sfo-io = "0.1.14"
sfo-sql = { version = "0.4", default-features = false, features = ["sqlite"] }
serde_yaml_ng.workspace = true
shlex.workspace = true
quinn = { version = "0.11.9", default-features = false, features = ["platform-verifier", "rustls", "ring", "runtime-tokio"] }
h3 = { version = "0.0.8" }
h3-quinn = { version = "0.0.10" }
http.workspace = true
serde_qs.workspace = true
serde_urlencoded.workspace = true
tokio-util = { version = "0.7", features = ["full"] }
async-compression = { version = "0.4", features = ["tokio", "gzip", "deflate", "brotli"] }
rustls-platform-verifier.workspace = true
as-any = "0.3.2"
libc = "0.2"
socket2 = "0.6.0"
jsonwebtoken.workspace = true
local-ip-address = "0.6"
rcgen.workspace = true
clap.workspace = true
percent-encoding = "*"
regex.workspace = true
mini-moka = "0.10"
callback-trait = "0.1"

buckyos-kit.workspace = true
kRPC.workspace = true
name-client.workspace = true
name-lib.workspace = true
ndn-lib = { git = "https://github.com/buckyos/cyfs-ndn.git", package = "ndn-lib", branch = "main"}
cyfs-process-chain = { path = "../cyfs-process-chain" }
cyfs-acme = { path = "../cyfs-acme" }
pin-project = "1.1.10"
#buckyos-api = { path = "../../kernel/buckyos-api" }

[dev-dependencies]
rcgen.workspace = true
tempfile.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
