[package]
name = "cyfs-lookup"
version.workspace = true
edition = "2024"

[dependencies]
tokio.workspace = true
sfo-result = "0.2"
dns-lookup = "3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
] }

[target.'cfg(target_os = "linux")'.dependencies]
tokio.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
