[package]
name = "cyfs-process-chain-lint"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
cyfs-process-chain = { path = "../cyfs-process-chain" }
