[package]
name = "cyfs-process-chain"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
log = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toml = "*"
async-trait = "*"
regex = "*"
nom = "*"
shlex = "*"
http-types = "*"
async-recursion = "*"
xmltree = "*"
globset = "*"
tokio = { version = "*", features = ["full"] }
simplelog = "*"
lazy_static = "*"
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"]}
http-body-util ="0.1"
clap =  { version = "*", features = ["string"]}
rustyline = "*"
dirs-next = "*"
boa_engine = "0.20.0"
boa_runtime  = "0.20.0"
boa_gc = "0.20.0"
futures = "*"
buckyos-kit = { git = "https://github.com/buckyos/buckyos-base.git", branch = "beta1", package = "buckyos-kit" }
pin-project-lite = "*"
url = "*"
httparse = "*"
trust-dns-resolver = "*"

[dev-dependencies]
rcgen = "*"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring", "tls12", "std"] }
