[package]
name = "cyfs-process-chain"
version.workspace = true
edition = "2024"
resolver = "3"

[dependencies]
log.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
async-trait.workspace = true
regex.workspace = true
nom = "*"
shlex.workspace = true
async-recursion = "*"
xmltree = "*"
globset = "*"
tokio.workspace = true
simplelog = "*"
lazy_static.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
http.workspace = true
clap = { workspace = true, features = ["string"] }
rustyline = "*"
dirs-next = "*"
boa_engine = "0.21.0"
boa_runtime  = "0.21.0"
boa_gc = "0.21.0"
futures.workspace = true
buckyos-kit.workspace = true
pin-project-lite = "*"
url.workspace = true
httparse = "*"
trust-dns-resolver = "*"
indexmap = { version = "2.13.0", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
rcgen.workspace = true
tokio-rustls.workspace = true
rustls = { version = "0.23", features = ["ring", "tls12", "std"] }

[[bench]]
name = "process_chain_runtime"
harness = false
