[package]
name = "cyfs-sn"
version = "0.4.0"
edition = "2021"
authors = ["BuckyOS DAO","@waterflier"]

[dependencies]
anyhow = "*"
log = "*"
lazy_static = "*"
tokio = { version = "*", features = ["full"] }

async-trait = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
env_logger = "*"
url = "*"
rusqlite =  { version = "*", features = ["bundled"] }
rand = "0.9.0"
once_cell = "*"
jsonwebtoken = "*"
http = "1"
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"]}
http-body-util ="0.1"

buckyos-kit = { git = "https://github.com/buckyos/buckyos-base.git", branch = "beta1", package = "buckyos-kit" }
kRPC = { git = "https://github.com/buckyos/buckyos-base.git", branch = "beta1", package = "kRPC" }
name-client = { git = "https://github.com/buckyos/buckyos-base.git", branch = "beta1", package = "name-client" }
name-lib = { git = "https://github.com/buckyos/buckyos-base.git", branch = "beta1", package = "name-lib" }
cyfs-gateway-lib = { path = "../cyfs-gateway-lib" }
#buckyos-api = { path = "../../kernel/buckyos-api" }
