[package]
name = "cyfs-sn"
version = "0.4.0"
edition = "2021"
authors = ["BuckyOS DAO","@waterflier"]

[dependencies]
anyhow.workspace = true
log.workspace = true
lazy_static.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
env_logger.workspace = true
url.workspace = true
rand.workspace = true
once_cell.workspace = true
jsonwebtoken.workspace = true
http.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true

buckyos-kit.workspace = true
kRPC.workspace = true
name-client.workspace = true
name-lib.workspace = true
cyfs-gateway-lib = { path = "../cyfs-gateway-lib" }
async-named-locker = "0.1"
callback-trait = "0.1"
sfo-sql = "0.4"
sfo-result = "0.2"
#buckyos-api = { path = "../../kernel/buckyos-api" }
