[package]
name = "cyfs-socks"
version = "0.4.0"
edition = "2021"
authors = ["BuckyOS DAO","@lurenpluto"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
boa_engine = "0.20"
boa_runtime = "0.20"
url = "*"
thiserror = "*"
async-trait = "*"
reqwest = "*"
log = "*"
trust-dns-resolver = "*"
futures-util = "*"
regex = "*"

serde_json = "*"
serde = "*"
fast-socks5 = "*"
once_cell = "*"
chrono = "*"
clap =  { version = "*", features = ["string"]}

buckyos-kit = { git = "https://github.com/buckyos/buckyos-base.git", branch = "beta1", package = "buckyos-kit" }
cyfs-process-chain = { path = "../cyfs-process-chain" }
cyfs-gateway-lib = { path = "../cyfs-gateway-lib" }
