[package]
name = "cyfs-tun"
version = "0.1.0"
edition = "2024"

[dependencies]
cyfs-gateway-lib = { path = "../cyfs-gateway-lib" }
tun = { version = "0.8", features = ["async"] }
ipstack = "0.5"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1"
cyfs-process-chain = { path = "../cyfs-process-chain" }
log = "0.4"
sfo-io = "0.1"
shlex = "1.3.0"
buckyos-kit = { git = "https://github.com/buckyos/buckyos-base.git",branch = "beta1", package = "buckyos-kit" }