[package]
name = "cyfs-tun"
version = "0.5.1"
edition = "2024"

[dependencies]
cyfs-gateway-lib = { path = "../cyfs-gateway-lib" }
tun = { version = "0.8", features = ["async"] }
ipstack = "0.5"
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
cyfs-process-chain = { path = "../cyfs-process-chain" }
log.workspace = true
sfo-io = "0.1"
shlex.workspace = true
buckyos-kit.workspace = true