[package]
name = "server-runner"
version = "0.5.1"
edition = "2024"
authors = ["BuckyOS DAO", "@waterflier"]

[dependencies]
tokio = { version = "1.41", features = ["macros", "net", "rt", "rt-multi-thread", "time"] }
log.workspace = true
cyfs-gateway-lib = { path = "../cyfs-gateway-lib" }
buckyos-kit.workspace = true
async-trait.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper = { version = "1.6", default-features = false, features = ["http1"] }
bytes.workspace = true

[dev-dependencies]
tempfile.workspace = true

